# freetrade-data

./: 2023-05-02 12:22:21.670926 UTC  Cargo.toml
src/: freetrade_cli.rs  freetrade_data.rs
