[package]
name = "freetrade_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "freetrade_data"
path = "src/freetrade_data.rs"

[[bin]]
name = "freetrade_cli"
path = "src/freetrade_cli.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15.5"
dialoguer = "0.10.4"
chrono = "0.4.24"


